addons/kiali/03-gateway.yaml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: gateway-kiali
  namespace: istio-system
spec:
  servers:
    - hosts:
        - kiali.teste.com.br
      port:
        name: kiali-https-443
        number: 443
        protocol: HTTPS
      # TO ENABLE TLS
      tls:
        mode: SIMPLE # enables HTTPS on this port
        credentialName: kiali-cert-ingress
  selector:
    istio: ingressgateway
